# GitHacker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GitHacker.py  GitHacker_3.py  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/security-advisories/: GHSA-hr3m-4qwq-3mgc.md
.github/workflows/: benchmark.yaml  deploy.yaml  release.yaml  security-benchmark.yaml  test.yaml
GitHacker/: __init__.py
benchmark/: __main__.py  compare.py  config.py  diff.py  disclosures.toml  docker.py  evil_server.py  gen.py  generate.py  models.py  report.py  run.py  runner.py  security.py  tools.toml
benchmark/scenarios/security/: _payload_lib.py
benchmark/scenarios/security/A1_fsmonitor/: build.py  meta.toml
benchmark/scenarios/security/A2_pager/: build.py  meta.toml
benchmark/scenarios/security/A3_smudge_filter/: build.py  meta.toml
benchmark/scenarios/security/A4_diff_external/: build.py  meta.toml
benchmark/scenarios/security/A5_core_editor/: build.py  meta.toml
benchmark/scenarios/security/B1_index_traversal/: build.py  meta.toml
benchmark/scenarios/security/C1_html_traversal/: build.py  meta.toml
benchmark/scenarios/security/C2_redirect_file/: meta.toml  oracle.py
benchmark/scenarios/security/C3_redirect_ssrf/: meta.toml
benchmark/scenarios/security/C4_absolute_path_write/: build.py  meta.toml
benchmark/scenarios/security/D1_head_ref_traversal/: build.py  meta.toml
benchmark/scenarios/security/E1_cve_2025_48384/: build.py  meta.toml
benchmark/scenarios/security/E2_cve_2024_32002/: build.py  meta.toml
benchmark/scenarios/security/E3_cve_2018_11235/: build.py  meta.toml
benchmark/scenarios/security/E4_cve_2023_29007/: build.py  meta.toml
benchmark/scenarios/security/E5_cve_2017_1000117/: build.py  meta.toml
benchmark/scenarios/security/F2_lfs_smudge/: build.py  meta.toml
benchmark/tools/dumpall/: Dockerfile  run.sh
benchmark/tools/dvcs-ripper/: Dockerfile  run.sh
benchmark/tools/git-dumper/: Dockerfile  run.sh
benchmark/tools/git-dumper-hh/: Dockerfile  run.sh
benchmark/tools/gitdump/: Dockerfile  run.sh
benchmark/tools/githack/: Dockerfile  run.sh
benchmark/tools/githacker/: Dockerfile  run.sh
benchmark/tools/gittools/: Dockerfile  run.sh
benchmark/tools/rbozburun-git-hacker/: Dockerfile  run.sh
docs/: app.js  astro.config.mjs  index.html  package-lock.json  package.json  style.css  tailwind.config.mjs
docs/data/: benchmark.json
docs/public/data/: benchmark.json  security.json
docs/src/components/: Banner.astro  Citation.astro  Figure.astro  Footnote.astro  SectionHeading.astro  Table.astro
docs/src/i18n/: strings.ts
docs/src/layouts/: Layout.astro
docs/src/lib/: benchmark.ts  security.ts
docs/src/lib/figures/: categoryBars.ts  dispersion.ts  heatmap.ts  leaderboard.ts  scatter.ts  timeline.ts
docs/src/pages/: benchmark.astro  index.astro  methodology.astro  reproduce.astro  security.astro
docs/src/styles/: global.css
githacker/: __main__.py
templates/: index.html  result.html
test/apache-no-indexes/: docker-compose.yml
test/docker/apache-index-disabled/: docker-compose.yml  httpd.conf  www
test/docker/apache-index-enabled/: docker-compose.yml
test/docker/nginx-index-disabled/: docker-compose.yml
test/docker/nginx-index-enabled/: docker-compose.yml  nginx.conf
test/docker/php-lfi/: docker-compose.yml
test/nginx-indexes/: docker-compose.yml
test/php-lfi/: docker-compose.yml
tests/: test_add_folder_traversal.py  test_benchmark_traversal_corpus.py  test_compare.py  test_ref_validation.py  test_security_oracles.py
utils/: diff.py  gen.py  test.py
