[project]
name = "githacker"
version = "1.1.3"
description = "A multiple threads tool to download the `.git` folder and rebuild git repository locally."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "coloredlogs>=15.0.1",
    "gitpython>=3.1.45",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "semver>=3.0.4",
]

[project.scripts]
githacker = "githacker.__main__:main"

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.bump-my-version.files]
"pyproject.toml" = [
    'project.version'
]
