[project]
name = "githacker"
version = "1.1.3"
description = "A multiple threads tool to download the `.git` folder and rebuild git repository locally."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "coloredlogs>=15.0.1",
    "gitpython>=3.1.46",
    "requests>=2.33.0",
    "semver>=3.0.4",
]

[project.scripts]
githacker = "githacker.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    # Used by utils/diff.py — a developer-only diff/report helper that
    # compares dumped repos against the originals during local benchmarking.
    "verboselogs>=1.7",
    "jinja2>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bump-my-version.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bump-my-version.files]]
filename = "githacker/__main__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"
