[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["githacker"]

[project]
name = "githacker"
version = "1.1.10"
description = "A multiple threads tool to download the `.git` folder and rebuild git repository locally."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "coloredlogs>=15.0.1",
    "gitpython>=3.1.46",
    "requests>=2.33.0",
    "semver>=3.0.4",
]

[project.scripts]
githacker = "githacker.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    # Used by utils/diff.py — a developer-only diff/report helper that
    # compares dumped repos against the originals during local benchmarking.
    "verboselogs>=1.7",
    "jinja2>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["docs", "playground", "benchmark/results", "test/report"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",            # import sorting
    "B",            # flake8-bugbear
    "UP",           # pyupgrade
    "SIM",          # flake8-simplify
]
ignore = [
    "E501",  # line too long — keep messages readable, line-length is advisory
    "B008",  # function-call default args (argparse pattern)
    "SIM105", # contextlib.suppress is not always clearer than try/except/pass
    "B904",  # raise from — noisy in CLI tools
]

[tool.ruff.format]
# Match the repo's established single-quote style (previously enforced by the
# double-quote-string-fixer hook that ruff now replaces).
quote-style = "single"

[tool.bumpversion]
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bump-my-version.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bump-my-version.files]]
filename = "githacker/__main__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"
